compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__assign_unused_result_in_block.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(code, 3, ASSIGN_UNUSED_RESULT)"
---
pub fn main() {
    {
        let _ = Ok(0)
        Nil
    }
    Nil
}
