compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__assign_unused_result_on_block_end.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n    {\n        Ok(0)\n        Ok(0)\n    } // test here\n    Nil\n}\n"
---
----- BEFORE ACTION

pub fn main() {
    {
        Ok(0)
        Ok(0)
    } // test here
    ▔▔▔▔▔▔▔▔▔▔↑   
    Nil
}


----- AFTER ACTION

pub fn main() {
    let _ = {
        Ok(0)
        Ok(0)
    } // test here
    Nil
}
