compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__assign_unused_result_on_block_start.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n    { // test here\n        Ok(0)\n        Ok(0)\n    }\n    Nil\n}\n"
---
----- BEFORE ACTION

pub fn main() {
    { // test here
    ▔▔▔▔▔▔▔▔▔▔↑   
        Ok(0)
        Ok(0)
    }
    Nil
}


----- AFTER ACTION

pub fn main() {
    let _ = { // test here
        Ok(0)
        Ok(0)
    }
    Nil
}
