compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__assign_unused_result_with_block.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n    {\n        Ok(0)\n        Ok(0)\n    }\n    Nil\n}\n"
---
pub fn main() {
    let _ = {
        Ok(0)
        Ok(0)
    }
    Nil
}
